body overflow fix ui sticky

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
-
+html, body {
+  overflow: auto;
+}
 
 
 #splash-photo {
